@@ -787,7 +787,44 @@ parameter_list|(
 name|int
 name|token
 parameter_list|)
+throws|throws
+name|SemanticException
 block|{
+comment|// date, datetime, and timestamp types aren't currently supported
+if|if
+condition|(
+name|token
+operator|==
+name|HiveParser
+operator|.
+name|TOK_DATE
+operator|||
+name|token
+operator|==
+name|HiveParser
+operator|.
+name|TOK_DATETIME
+operator|||
+name|token
+operator|==
+name|HiveParser
+operator|.
+name|TOK_TIMESTAMP
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|UNSUPPORTED_TYPE
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
 return|return
 name|TokenToTypeName
 operator|.
