@@ -1,0 +1,1 @@
+CREATE TABLE date_test (d DATE);
