@@ -501,6 +501,9 @@ Release 0.5.0 -  Unreleased
     HIVE-1072. Keep CreateTime when a partition is overwritten.
     (Paul Yang via zshao)
 
+    HIVE-1059. Date/DateTime/TimeStamp types should throw an error.
+    (Paul Yang via zshao)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
